force-app/main/default/objects/Menu_Category__c/Menu_Category__c.object-meta.xml
<CustomObject>
    <label>Menu Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <pluralLabel>Menu Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>