force-app/main/default/objects/Menu_Category__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Restaurant</label>
    <referenceTo>Restaurant__c</referenceTo>
    <relationshipLabel>Menu Categories</relationshipLabel>
    <relationshipName>Menu_Categories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>